[1.0.1 - 15.02.2025]
	* fix loading of few monsters in opentibiabr canary

[1.0 - 14.02.2025]
	* first release